--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://manu3569.github.io
-title: Lucid Coding
-subtitle: 
+title: Manuel Neuhauser
+subtitle: Ruby, PHP, JavaScript, SQL, HTML, CSS, Networking, Security
 author: Manuel Neuhauser
 simple_search: http://google.com/search
 description:
